# EBM_implement

./: .gitignore  EBM_TLE.md  EBM_TLE_br.md  README.md  USER_GUIDE.md  ebm  pyproject.toml  requirements.txt
src/ebm_tle/: __init__.py  __main__.py  cli.py  demo.py  fit.py  paths.py  synthetic.py
tests/: conftest.py  test_cli.py  test_demo_fit.py
