[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ebm-tle"
version = "0.1.0"
description = "Internal research CLI for KDE event-based models (pySuStaIn / kde_ebm)"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
    "slow: KDE+MCMC integration (include by default in full suite)",
]
